[tool.poetry]
name = "whence-jam"
version = "0.1.0"
description = "An app for knowing who recommended a song or album"
authors = ["whence-jam contributors"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/user/whence-jam-python-claude"
repository = "https://github.com/user/whence-jam-python-claude"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0.0"
requests = "^2.31.0"
flask = "^2.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
types-requests = "^2.31.0"

[tool.poetry.scripts]
whence-jam = "whence_jam.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B018"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=whence_jam --cov-report=term-missing"

[tool.coverage.run]
source = ["whence_jam"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]